[tool.poetry]
name = "poetry-tensorflow-pytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
tensorflow = {version = "2.8.2", markers="platform_machine == 'x86_64'"}
tensorflow-aarch64 = {version = "2.8.2", markers="platform_machine == 'aarch64'"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
